# depth_forward_platonic_space-clinical_model

./: .gitignore  .rust-toolchain.toml  AGENT.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  SECURITY.md
.codex/: 00-core-rule.md  10-project-map.md  20-general-workflow.md  25-kanban-versioning-rules.md  30-kanban-maintenance.md  40-traceability.md  60-quality-gates.md  70-branching-and-commits.md  80-example-agent-flow.md  90-codex-compat.md  README.md  config.example.toml
.codex/50-crates/: core.md  fake_data.md  index.md  ingestion.md  mapping.md  pipeline.md  test_suite.md
.codex/50-crates/app/: cli.md
.codex/50-crates/domain/: core.md  fake_data.md  ingestion.md  mapping.md  pipeline.md  terminology.md
.codex/50-crates/platform/: configuration.md  observability.md  test_suite.md
.github/workflows/: ci.yml  eval.yml  warehouse.yml
ci/: eval_thresholds.json
data/environment/: .env.app.cli.example  .env.app.web.api.example  .env.app.web.frontend.example  .env.domain.fake_data.example  .env.domain.fhir_validation.example  .env.platform.observability.example  .env.platform.test_suite.example  README.md
data/eval/: README.md  gold_pet_ct_comprehensive.ndjson  gold_pet_ct_extended.ndjson  gold_pet_ct_small.ndjson  silver_pet_ct_extended.ndjson  silver_pet_ct_small.ndjson
data/makefiles/: apps.toml  core.toml  docs.toml
data/scripts/: codex_sync.sh  install_rust_tooling.sh
data/sql/migrations/: 0001_init.sql
docs/book/: book.toml
docs/book/src/: SUMMARY.md  index.md
docs/kanban/: AGENTS.override.md  ROADMAP.md  _epic_versions.yaml  base-skeleton.md  feature-base-skeleton.md  feature-fhir-pipeline-mvp.md  feature-mapping-ncit-skeleton.md
docs/kanban/feature/: 001-base-skeleton.md  002-fhir-pipeline-mvp.md  003-mapping-ncit-skeleton.md  004-app-cli-mvp.md  005-app-web-mvp.md  (+17 more)
docs/runbook/: env-quickstart.md  makefile-quickstart.md  mapping-eval-quickstart.md  warehouse-quickstart.md  web-quickstart.md
docs/system-design/: ncit_fhir_obo-overview.md
lib/app/cli/: Cargo.toml  README.md
lib/app/web/backend/api/: Cargo.toml  README.md
lib/app/web/backend/api/src/: dto.rs  lib.rs  main.rs  server.rs
lib/app/web/backend/datamart/: Cargo.toml
lib/app/web/backend/datamart/src/: dim.rs  fact.rs  keys.rs  lib.rs  sql.rs
lib/app/web/frontend/: Cargo.toml  README.md
lib/app/web/frontend/src/: client.rs  config.rs  lib.rs  main.rs  routes.rs  state.rs  view_model.rs  views.rs
lib/core/: Cargo.toml
lib/domain/core/: Cargo.toml
lib/domain/core/src/: lib.rs
lib/domain/core/src/encounter/: mod.rs
lib/domain/core/src/fhir/: mod.rs
lib/domain/core/src/mapping/: mod.rs
lib/domain/core/src/order/: mod.rs
lib/domain/core/src/patient/: mod.rs
lib/domain/core/src/staging/: mod.rs
lib/domain/core/src/value/: mod.rs
lib/domain/eval/: Cargo.toml
lib/domain/eval/benches/: eval_bench.rs
lib/domain/eval/src/: io.rs  lib.rs  report.rs
lib/domain/fake_data/: Cargo.toml
lib/domain/fake_data/data/: README.md
lib/domain/fake_data/data/eval/: README.md  bronze_pet_ct_mixed.manifest.json  bronze_pet_ct_mixed.ndjson  bronze_pet_ct_small.manifest.json  bronze_pet_ct_small.ndjson  bronze_pet_ct_unknowns.manifest.json  bronze_pet_ct_unknowns.ndjson  gold_pet_ct_comprehensive.manifest.json  gold_pet_ct_comprehensive.ndjson  gold_pet_ct_extended.manifest.json  gold_pet_ct_extended.ndjson  gold_pet_ct_small.baseline.json  gold_pet_ct_small.manifest.json  gold_pet_ct_small.ndjson  pet_ct_extended.manifest.json  pet_ct_extended.ndjson  pet_ct_small.baseline.json  pet_ct_small.manifest.json  pet_ct_small.ndjson  silver_pet_ct_extended.manifest.json  silver_pet_ct_extended.ndjson  silver_pet_ct_obo.manifest.json  silver_pet_ct_obo.ndjson  silver_pet_ct_small.manifest.json  silver_pet_ct_small.ndjson
lib/domain/fake_data/data/meta/: eval_thresholds.json
lib/domain/fake_data/data/regression/: fhir_bundle_extra_codings.json  fhir_bundle_invalid_status.json  fhir_bundle_missing_encounter.json  fhir_bundle_missing_subject.json  fhir_bundle_sr.json  fhir_bundle_unknown_code.json  fhir_bundle_uppercase_status.json  mapping_cpt_78815.json  mapping_ncit_obo.json  mapping_snomed_pet.json  mapping_unknown.json  mapping_unknown_system.json  service_request_active.json
lib/domain/fake_data/src/: encounter.rs  lib.rs  order.rs  patient.rs  raw_fhir.rs  scenarios.rs  value.rs
lib/domain/fake_data/src/fixtures/: bundles.rs  eval.rs  mapping.rs  mod.rs
lib/fake_data/: Cargo.toml
lib/mapping/: Cargo.toml
lib/observability/: Cargo.toml
lib/pipeline/: Cargo.toml
lib/pipeline/src/: lib.rs
lib/platform/test_suite/: Cargo.toml
lib/platform/test_suite/fixtures/eval/: README.md
lib/platform/test_suite/fixtures/regression/: fhir_bundle_extra_codings.json  fhir_bundle_invalid_status.json  fhir_bundle_missing_encounter.json  fhir_bundle_missing_subject.json  fhir_bundle_sr.json  fhir_bundle_unknown_code.json  fhir_bundle_uppercase_status.json  mapping_ncit_obo.json  mapping_unknown.json  mapping_unknown_system.json
lib/platform/test_suite/src/: assertions.rs  fixtures.rs  lib.rs  regression.rs
lib/platform/test_suite/tests/: e2e_tests.rs  integration_tests.rs
lib/platform/test_suite/tests/e2e/: fhir_ingest_flow.rs  mapping_pipeline.rs  mod.rs  observability_metrics.rs  service_request_flow.rs
lib/platform/test_suite/tests/integration/: datamart.rs  external_validation.rs  fhir_ingest.rs  mapping.rs  mapping_eval.rs  mod.rs  regression.rs  validation.rs  warehouse.rs  web_api.rs
lib/platform/test_suite/tests/unit/: mapping_properties.rs  mod.rs  property_roundtrip.rs
lib/test-suite/: Cargo.toml
lib/test_suite/: Cargo.toml
lib/test_suite/fixtures/regression/: mapping_snomed_pet.json
lib/test_suite/src/: assertions.rs  fixtures.rs  lib.rs  regression.rs
lib/test_suite/tests/e2e/: fhir_ingest_flow.rs  mod.rs  service_request_flow.rs
lib/test_suite/tests/integration/: mapping.rs  mod.rs  regression.rs
lib/test_suite/tests/unit/: mapping_properties.rs  mod.rs  property_roundtrip.rs
(+154 files in other folders)
