[package]
name = "depth_forward_platonic_space_clinical_model"
# Inherit version/edition from workspace.package (Rust 1.64+)
version.workspace = true
edition.workspace = true

[workspace]
members = [
    "lib/core",
    "lib/fake_data",
    "lib/ingestion",
    "lib/mapping",
    "lib/pipeline",
    "lib/test_suite",
]

# Explicit resolver, recommended with edition 2021/2024 workspaces
resolver = "3"

[workspace.package]
# Values inherited by member crates (and by root via *.workspace = true)
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rand = "0.9.2"
fake = { version = "4.4.0", features = ["derive"] }
proptest = "1.9.0"

[dependencies]
# root-package-specific dependencies go here (if any), e.g.:
# domain crates, CLIs, etc.

[dev-dependencies]
dfps_test_suite = { path = "lib/test_suite" }
