[package]
name = "depth_forward_platonic_space_clinical_model"
# Inherit version/edition from workspace.package (Rust 1.64+)
version.workspace = true
edition.workspace = true

[workspace]
members = [
    "lib/app/cli",
    "lib/app/web/backend/api",
    "lib/app/web/frontend",
    "lib/app/web/backend/datamart",
    "lib/domain/terminology",
    "lib/domain/core",
    "lib/domain/fake_data",
    "lib/domain/ingestion",
    "lib/domain/mapping",
    "lib/domain/pipeline",
    "lib/platform/configuration",
    "lib/platform/observability",
    "lib/platform/test_suite",
]

# Explicit resolver, recommended with edition 2021/2024 workspaces
resolver = "3"

[workspace.package]
# Values inherited by member crates (and by root via *.workspace = true)
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
actix-multipart = "0.6.1"
actix-web = "4.9.0"
axum = { version = "0.7.5", features = ["macros", "multipart"] }
bytes = "1.6.1"
clap = { version = "4.5.10", features = ["derive"] }
fake = { version = "4.4.0", features = ["derive"] }
futures-util = "0.3.31"
maud = "0.27.0"
once_cell = "1.20.2"
proptest = "1.9.0"
rand = "0.9.2"
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "signal"] }
dotenvy = "0.15.7"
uuid = { version = "1.10.0", features = ["v4", "serde"] }

[dependencies]
# root-package-specific dependencies go here (if any), e.g.:
# domain crates, CLIs, etc.

[dev-dependencies]
dfps_test_suite = { path = "lib/platform/test_suite" }
