[package]
name = "dfps_test_suite"
version.workspace = true
edition.workspace = true

[dependencies]
dfps_core = { path = "../core" }
dfps_fake_data = { path = "../fake_data" }
dfps_ingestion = { path = "../ingestion" }
serde_json.workspace = true
proptest.workspace = true
serde.workspace = true
