[package]
name = "dfps_test_suite"
version.workspace = true
edition.workspace = true

[dependencies]
dfps_core = { path = "../core" }
dfps_fake_data = { path = "../fake_data" }
dfps_ingestion = { path = "../ingestion" }
dfps_mapping = { path = "../mapping" }
dfps_pipeline = { path = "../pipeline" }
serde_json.workspace = true
proptest.workspace = true
serde.workspace = true
