[package]
name = "dfps_eval"
version.workspace = true
edition.workspace = true

[dependencies]
dfps_core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
rand = { workspace = true, optional = true }
sha2 = "0.10"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "eval_bench"
harness = false

[features]
default = []
eval-advanced = ["rand"]
