[package]
name = "dfps_fake_data"
version.workspace = true
edition.workspace = true

[dependencies]
dfps_core = { path = "../core", features = ["dummy"] }
fake.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
dfps_configuration = { path = "../../platform/configuration" }
