[package]
name = "dfps_test_suite"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde_json.workspace = true
proptest.workspace = true
serde.workspace = true
once_cell.workspace = true

http-body-util = "0.1"
tower = "0.5"

dfps_api = { path = "../../app/web/backend/api" }
dfps_datamart = { path = "../../app/web/backend/datamart" }
dfps_core = { path = "../../domain/core" }
dfps_fake_data = { path = "../../domain/fake_data" }
dfps_ingestion = { path = "../../domain/ingestion" }
dfps_mapping = { path = "../../domain/mapping" }
dfps_pipeline = { path = "../../domain/pipeline" }
dfps_observability = { path = "../observability" }
dfps_configuration = { path = "../configuration" }
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio", "macros", "sqlite"] }
dfps_eval = { path = "../../domain/eval" }

