[package]
name = "dfps_api"
version.workspace = true
edition.workspace = true

[lib]
name = "dfps_api"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
log = "0.4"
env_logger = "0.11"
thiserror = "2.0.17"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
dfps_core = { path = "../../../../domain/core" }
dfps_pipeline = { path = "../../../../domain/pipeline" }
dfps_observability = { path = "../../../../platform/observability" }
dfps_configuration = { path = "../../../../platform/configuration" }
