[package]
name = "dfps_datamart"
version.workspace = true
edition.workspace = true

[dependencies]
dfps_core = { path = "../../../../domain/core" }
dfps_pipeline = { path = "../../../../domain/pipeline" }
dfps_configuration = { path = "../../../../platform/configuration" }
serde.workspace = true
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio", "macros", "sqlite"] }
